--- a/tra_cuu_phong_tro/sourcecode/trangchu.css
+++ b/tra_cuu_phong_tro/sourcecode/trangchu.css
@@ -202,12 +202,17 @@ main {
     justify-content: center;
     align-items: center;
     width: auto;
-    margin: 10px 10%;
+    margin: 0 10%;
     padding: 10px;
     justify-content: center;
     background-color: #0045a8;
     height: 100px;
     border-radius: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 
 .form-tim-kiem {
@@ -295,6 +300,32 @@ main {
     width: 100%;
 }
 
+.dropdown_content-district {
+    font-size: 20px;
+    padding: 5px;
+    background-color: white;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.dropdown_content-hamlet {
+    font-size: 20px;
+    padding: 5px;
+    background-color: white;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
 .dropdown_content-price {
     font-size: 20px;
     display: none;
@@ -306,11 +337,22 @@ main {
     width: 100%;
 }
 
-#dropdown_content-area {
+.dropdown_content-area {
+    font-size: 20px;
+    display: none;
+    position: absolute;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 1;
+    width: 100%;
+}
+
+#dropdown_content_area {
     height: 23px;
     font-size: 20px;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid white;
 }
 
 .nhap-gia {
@@ -331,15 +373,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 300px;
+    width: 80%;
     height: 5px;
     appearance: none;
-    background: black;
+    background: linear-gradient(to right, #33CCFF, #33CCFF);
     border-radius: 5px;
     outline: none;
     border-radius: 5px;
     outline: none;
-    margin: 20px;
+    margin: 10%;
 }
 
 
@@ -365,6 +407,7 @@ main {
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-bottom: 50px;
 }
 
 .danhsachphongtro {
